fix:- updated the alignment and color of course cards

--- a/css/style.css
+++ b/css/style.css
@@ -22,56 +22,36 @@
 }
 
 .course-container {
-  width: 100%;
+  width: 80%;
   margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
-  margin-left: 3%;
+  margin-left: 10%;
+  justify-content: center;
 }
 .div-class1 {
-  /* flex: 1; */
-  /* border: 10px; */
-  width: 30%;
-  /* padding-right: 5%; */
-  margin: 10px;
-  text-align: center;
-  /* padding-bottom: 10px; */
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.div-class2 {
-  flex: 1;
-  border: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 100px;
-  margin: 10px;
+  width: 380px;
+  margin: 10px 20px 10px 20px;
+  padding-bottom: 7px;
   text-align: center;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.div-class1 h4,
-.div-class2 h4 {
-  color: rgb(27, 117, 187);
+.div-class1 h4 {
+  margin-bottom: 0;
 }
 
 .p1-class {
   color: #555;
+  margin-top: 3px;
 }
 
 .p-class {
   color: #999;
 }
-/* .div-main {
-  padding-inline: 25%;
-  flex: 1;
-  width: 40%;
-} */
 
 .button-class {
-  color: rgb(27, 117, 187);
-  border: 1px solid rgb(27, 117, 187);
+  border: 1px solid;
   border-radius: 27px;
   padding: 0.7em 2em;
-  background-color: rgba(27, 117, 187, 0.05);
 }
